--- a/lab-template/introducere.tex
+++ b/lab-template/introducere.tex
@@ -3,6 +3,8 @@
 \paragraph{Informatii generale}
 \begin{itemize}
 \item
+
+
 	\tab Proiectul consta in proiectarea unui robot multifunctional bazat peplacile de dezvoltare Arduino. Robotul experimental este alcatuit din urmatoarele componente:\\
 -	Placa microcontroller compatibila Arduino Uno;\\
 -	Driver motoare L298N Dual H-Bridge;\\
@@ -13,6 +15,10 @@
 -	Suport plexiglas;\\
 -	Doua placi de prototipizare (BreadBoard)\\
 -	1 senzor sonar;\\
+
+	\begin{center}
+	\includegraphics[scale=0.5]{robo22.png}\\
+	\end{center}
 \end{itemize}
 
 \paragraph{\bf{Functionalitati}}
