--- a/lab-template/referinte.tex
+++ b/lab-template/referinte.tex
@@ -2,5 +2,5 @@
 \paragraph{Referinte}
 \begin{itemize}
 \item
-	\tab Codul cat si tehnicile utilizate pentru acest proiect s-au bazat pe reutilizarea laboratoarelor de PMP de cate ori a fost posibil. S-a incercat aprofundarea lor, ori functia de distanta  a fost inspirata de pe forumul arduino.
+	\tab Codul cat si tehnicile utilizate pentru acest proiect s-au bazat pe reutilizarea laboratoarelor de PMP de cate ori a fost posibil. S-a incercat aprofundarea lor, ori functia de distanta  a fost inspirata de pe forumul arduino \href{https://www.arduino.cc/en/Tutorial/Ping}{link here}.
 \end{itemize}
